nird/apps/postgres-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metatrack-db
spec:
  selector:
    app: metatrack-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
