nird/apps/postgres-server/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-metatrack-to-postgres-ingress
spec:
  podSelector:
    matchLabels:
      app: metatrack-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: metatrack-api
      ports:
        - protocol: TCP
          port: 5432
